<resources>
    <string name="app_name">My Application</string>
    <string name="contacts">Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="join_us">Join Us!</string>
    <string name="first_name_input">First Name</string>
    <string name="last_name_input">Last Name</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="password_input">Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirmpassword_input">ConfirmPassword</string>
    <string name="nickname">Nickname</string>
    <string name="nickname_input">Nickname</string>
    <string name="usericon">usericon</string>
    <string name="passwordiicon">passwordIIcon</string>
    <string name="sign_up">Sign Up</string>
    <string name="logintext">Login</string>
    <string name="usernametext">Username</string>
    <string name="username">Username</string>
    <string name="type_username">Type UserName</string>
    <string name="lockicon">lockIcon</string>
    <string name="type_password">Type Password</string>
    <string name="welcome_with_spaces">Welcome!</string>
    <string name="undrline"><u> Create An Account  </u> </string>
    <string name="login">Login</string>
    <string name="type_your_message">Type your message...</string>
    <string name="steve_jobs">Steve Jobs</string>
    <string name="the_last_message_will_be_here">The last message will be here</string>
    <string name="_21_01_2023_14_53">21/01/2023 14:53</string>
    <string name="create_an_account">Create an account</string>
    <string name="adfsgadfgadegadfsgadfgadegadfsgadfgadegadfsgadfgadegadfsgadfgadegadfsgadfgadegadfsgadfgadegadfsgadfgadegadfsgadfgadeg">ADFSGADFGADEGADFSGADFGADEGADFSGADFGADEGADFSGADFGADEGADFSGADFGADEGADFSGADFGADEGADFSGADFGADEGADFSGADFGADEGADFSGADFGADEG</string>
    <string name="textview">TextView</string>
    <string name="a">A</string>
    <string name="_24_10_2020_13_23">24/10/2020 13:23</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My Profile:</string>
    <string name="server_url">http(s)://URL:PORT</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
</resources>