<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shared_background">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#661B1919"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/logintype"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/logintext"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/usernametext"
            android:textColor="@color/white"
            android:textSize="30dp">

        </TextView>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/inputbackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:contentDescription="@string/usericon"
                android:src="@drawable/userlogin">


            </ImageView>

            <EditText
                android:id="@+id/usernameInput"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="6"
                android:autofillHints="none"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:hint="@string/type_username"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:textSize="20dp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="27dp">

        </TextView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/inputbackground"
            android:orientation="horizontal">


            <ImageView

                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:contentDescription="@string/lockicon"
                android:src="@drawable/userpassword">

            </ImageView>

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="6"
                android:autofillHints="none"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:hint="@string/type_password"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:textSize="20dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>



        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:autoLink="web"
            android:fontFamily="sans-serif-medium"
            android:text="@string/undrline"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/minedarkblue"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login"
            android:textSize="30dp"
            app:cornerRadius="10dp">


        </Button>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>